--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,22 +36,15 @@
 
 			<p class="nav" id="about">ABOUT</p>
 			<ul class="index">
-				<li>{nickname: 'lzyy', nickname_cn: '无网不剩', name: '李忠'}</li>
-				<li>84年生人，大学时误入网途，沉迷至今</li>
-				<li>07年毕业于大连理工大学，在大二时参加了国际马拉松，并跑完全程</li>
-				<li>擅长web开发，常有各种想法，并付诸实践</li>
-				<li>曾就职于时光网，现就职于凤凰网，从事公司内部框架开发</li>
-				<li>早年曾混迹于经典论坛，担任过Flash版版主</li>
-				<li>常用利器：php/nginx/mysql/ubuntu/python/jquery/vim/firefox/git/kohana</li>
+				<li>test page,this is just a test!</li>
+				<li>这里暂时只是一个测试页面，一切仍在实践中</li>
+				<li>继续测试，继续测试</li>
+				<li>php/nginx/mysql/centos/python/jquery/vim/firefox/git/</li>
 			</ul>
 
 			<p class="nav" id="projects">PROJECTS</p>
 			<ul class="index">
-				<li><a href="http://xingzher.com">行者</a> <span style="color:#999">- 专为驴友打造的旅行社区</span></li>
-				<li><a href="http://3gvg.leezhong.com">3gvg</a> <span style="color:#999">- 一个讨论大家喜爱的3G手机的地方</span></li>
-				<li><a href="http://www.yiyimama.com">1亿妈妈</a> <span style="color:#999">- 1亿妈妈改变孩子的未来</span></li>
-				<li><a href="http://blog.f508.com/">芬理希梦官方博客</a> <span style="color:#999">- 日本最佳原创设计品牌</span></li>
-				<!--<li><a href="http://code.google.com/p/intext/downloads/list">intext</a> <span style="color:#999">- 一款简洁易用的wordpress主题 (<a href="http://www.alidba.net/">demo</a>)</span></li>-->
+				<li><a href="http://xingzher.com">博客</a> <span style="color:#999">- 个人博客</span></li>
 			</ul>
 
 			<p class="nav" id="quotes">QUOTES</p>
