--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<title>{{ page.title }} - 无网不剩</title>
+		<title>{{ page.title }} - tontinme's blog</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 		<script type="text/javascript">
@@ -21,7 +21,7 @@
 	<body>
 		<div id="wrapper">
 			<div id="header">
-				<h1><a href="/">无网不剩</a></h1>
+				<h1><a href="/">tontinme's blog</a></h1>
 			</div>
 			<br />
 			<div id="content">
