--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<title>无网不剩</title>
+		<title>tontinme's blog</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 		<script type="text/javascript">
@@ -21,12 +21,12 @@
 	<body>
 		<div id="wrapper">
 			<div id="header">
-				<h1><a href="/">无网不剩</a></h1>
+				<h1><a href="/">tontinme's blog</a></h1>
 				<ul>
 					<li><a href="#about">About</a></li>
 					<li><a href="#quotes">Quotes</a></li>
 					<li><a href="#projects">Projects</a></li>
-					<li><a href="http://leezhong.com/resume">Resume</a></li>
+					<li><a href="http://tontinme.github.com/resume">Resume</a></li>
 					<li><a href="#links">Links</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
@@ -81,15 +81,15 @@
 
 			<p class="nav" id="links">LINKS</p>
 			<div>
-				<a href="http://github.com/lzyy">github</a><span style="color:#999"><span style="color:#999"> / </span></span>
-				<a href="http://twitter.com/lzyy">twitter</a>
+				<a href="http://github.com/tontinme">github</a><span style="color:#999"><span style="color:#999"> / </span></span>
+				<a href="http://twitter.com/tontinme">twitter</a>
 			</div>
 
 			<p class="nav" id="contact">CONTACT</p>
 			<div>healdream#gmail.com</div>
 
 			<div id="footer">
-				<a id="feed" href="http://feeds.feedburner.com/lzyy"><img src="/image/feed.png"></a></a>
+				<a id="feed" href="http://feeds.feedburner.com/tontinme"><img src="/image/feed.png"></a></a>
 				<span style="color:#bbb;font-size:12px">让部分人的生活变得更加美好和方便</span>
 				<p style="clear:both"></p>
 			</div>
