--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@
 			</div>
 
 			<p class="nav" id="contact">CONTACT</p>
-			<div>healdream#gmail.com</div>
+			<div>tontinme at gmail.com</div>
 
 			<div id="footer">
 				<a id="feed" href="http://feeds.feedburner.com/tontinme"><img src="/image/feed.png"></a></a>
