--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,7 +48,7 @@
 			</div>
 
 			<div id="footer">
-				<a id="feed" href="http://feeds.feedburner.com/lzyy"><img src="/image/feed.png"></a></a>
+				<a id="feed" href="http://feeds.feedburner.com/tontinme"><img src="/image/feed.png"></a></a>
 				<span style="color:#aaa">make the world a little better and eaiser</span>
 				<p style="clear:both"></p>
 			</div>
