--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,13 +43,13 @@
     				// var disqus_url = 'http://example.com/permalink-to-page.html';
 
     i				/* * * DON'T EDIT BELOW THIS LINE * * */
-    				(function() {
+				(function() {
         			var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        			dsq.src = 'http://tontinmesblog.disqus.com/embed.js';
+        			dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
         			(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     				})();
 			</script>
-			<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript=tontinmesblog">comments powered by Disqus.</a></noscript>
+			<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 			<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
 			<div id="footer">
 				<a id="feed" href="http://feeds.feedburner.com/tontinme"><img src="/image/feed.png"></a></a>
