--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,24 +33,25 @@
 					--EOF--
 					<p>若无特别说明，本站文章均为原创，转载请保留链接，谢谢</p>
 				</div>
-			<div id="disqus_thread"></div>
-			<script type="text/javascript">
-    				/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    				var disqus_shortname = 'tontinmesblog'; // required: replace example with your forum shortname
+				<div id="disqus_thread"></div>
+				<script type="text/javascript">
+    					/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    					var disqus_shortname = 'tontinmesblog'; // required: replace example with your forum shortname
 
-    				// The following are highly recommended additional parameters. Remove the slashes in front to use.
-				// var disqus_identifier = 'unique_dynamic_id_1234';
-    				// var disqus_url = 'http://example.com/permalink-to-page.html';
+    					// The following are highly recommended additional parameters. Remove the slashes in front to use.
+					// var disqus_identifier = 'unique_dynamic_id_1234';
+    					// var disqus_url = 'http://example.com/permalink-to-page.html';
 
-    i				/* * * DON'T EDIT BELOW THIS LINE * * */
-				(function() {
-        			var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        			dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-        			(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    				})();
-			</script>
-			<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-			<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+    					/* * * DON'T EDIT BELOW THIS LINE * * */
+					(function() {
+       	 				var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+       		 			dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        				(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    					})();
+				</script>
+				<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+				<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+			</div>
 			<div id="footer">
 				<a id="feed" href="http://feeds.feedburner.com/tontinme"><img src="/image/feed.png"></a></a>
 				<span style="color:#aaa">make the world a little better and eaiser</span>
