--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,9 @@
 	</head>
 
 	<body>
+		<div id="logo"><h1><a href="/">tontinme's blog</a></h1></div
 		<div id="wrapper">
 			<div id="header">
-				<h1><a href="/">tontinme's blog</a></h1>
 				<ul>
 					<li>
 						<a href="#">ARTICLES</a>
