--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 	</head>
 
 	<body>
-		<div id="logo"><h1><a href="/">tontinme's blog</a></h1></div
+		<div id="logo"><h1><a href="/">tontinme's blog</a></h1></div>
 		<div id="wrapper">
 			<div id="header">
 				<ul>
