--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ div#wrapper {
 	color:#222222;
 	font-size:14px;
 	line-height:190%;
-	margin:50px auto;
+	margin:0 auto 50px;
 	padding:20px;
 	text-shadow:0 1px 0 #FFFFFF;
 	width:700px;
@@ -157,12 +157,13 @@ ul.posts li .date {
 	margin:0;
 }
 
+/*
 h1 {
 	-moz-border-radius:5px 5px 5px 5px;
 	-webkit-border-radius:5px;
 	border-radius:5px;
 	-moz-box-shadow:0 1px 0 #FFFFFF;
-	/*background-color:#222222;*/
+	background-color:#222222;
 	color:#345768;
 	display:inline;
 	float:left;
@@ -175,6 +176,7 @@ h1 a {
 	color:#FFFFFF;
 	font-weight:400;
 }
+*/
 h2, h3, h4, h5, h6 {
 	font-weight:900;
 	line-height:100%;
@@ -182,6 +184,7 @@ h2, h3, h4, h5, h6 {
 h2 {
 	font-size:35px;
 	line-height:150%;
+	margin-bottom:20px;
 }
 
 li ul {
