--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,11 +19,10 @@
 	</head>
 
 	<body>
+		<div id="logo">
+			<h1><a href="/">tontinme's blog</a></h1>
+		</div>
 		<div id="wrapper">
-			<div id="header">
-				<h1><a href="/">tontinme's blog</a></h1>
-			</div>
-			<br />
 			<div id="content">
 				<a target="_blank" style="float:right;margin-top:15px" href="http://twitter.com/share?url=http://blog.leezhong.com{{ page.url }}&via=lzyy&text={{ page.title }}"><span class="balloon">retweet</span><img src="/image/tweet.png" /></a>
 				<h2>{{ page.title }}</h2>
