--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 		<div id="wrapper">
 			<div id="header">
 				<ul>
-					<li>
+<!--					<li>
 						<a href="#">ARTICLES</a>
 						<ul>
 							{% for category in site.categories %}
@@ -31,6 +31,8 @@
 							{% endfor %}
 						</ul>
 					</li>
+-->
+					<li><a href="/articles.html">ARTICLES</a></li>
 					<li><a href="/quotes.html">QUOTES</a></li>
 					<li><a href="/projects.html">PROJECTS</a></li>
 					<li><a href="/about.html">ABOUT</a></li>
