--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,12 +33,13 @@
 					</li>
 -->
 					<li><a href="/articles.html">ARTICLES</a></li>
+					<li><a href="/category.html">CATEGORY</a></li>
 					<li><a href="/quotes.html">QUOTES</a></li>
 					<li><a href="/projects.html">PROJECTS</a></li>
-					<li><a href="/about.html">ABOUT</a></li>
 					<li><a href="/resume">RESUME</a></li>
 					<li><a href="/links.html">LINKS</a></li>
 					<li><a href="/contact.html">CONTACT</a></li>
+					<li><a href="/about.html">ABOUT</a></li>
 				</ul>
 			</div>
 			<br />
