--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 						</ul>
 					</li>
 -->
-					<li><a href="/articles.html">ARTICLES</a></li>
+					<li><a href="/archives.html">ARTICLES</a></li>
 					<li><a href="/category.html">CATEGORY</a></li>
 					<li><a href="/quotes.html">QUOTES</a></li>
 					<li><a href="/projects.html">PROJECTS</a></li>
