--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@ html {
 body {
 	-moz-background-size:100% auto;
 	background-attachment:fixed;
-	background-color:#666;
+/*	background-color:#666;
+*/
 	/*background-image:url("../images/background.jpg");*/
 	background-position:center center;
 	font-family:"Microsoft Yahei","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -72,7 +73,8 @@ div#wrapper {
 	-webkit-border-radius:5px;
 	border-radius:5px;
 	-moz-box-shadow:0 1px 0 #FFFFFF;
-	background-color:#EEEEEE;
+/*	background-color:#EEEEEE;
+*/
 	color:#222222;
 	font-size:14px;
 	line-height:190%;
