--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 					<li><a href="/category.html">CATEGORY</a></li>
 					<li><a href="/quotes.html">QUOTES</a></li>
 					<li><a href="/projects.html">PROJECTS</a></li>
-					<li><a href="/resume">RESUME</a></li>
+					<li><a href="/resume.html">RESUME</a></li>
 					<li><a href="/about.html">ABOUT</a></li>
 				</ul>
 			</div>
@@ -64,7 +64,13 @@
 			</div>
 
 			<div id="footer">
-				<a id="feed" href="http://feeds.feedburner.com/tontinme"><img src="/image/feed.png"></a></a>
+				<a id="feed" href="/atom.xml"><img src="/image/rss.png"></a></a>
+				<a id="feed" href="http://mailto:tontinme@gmail.com"><img src="/image/gmail.png"></a></a>
+				<a id="feed" href="http://github.com/tontinme"><img src="/image/github.png"></a></a>
+				<a id="feed" href="http://twitter.com/tontinme"><img src="/image/twitter.png"></a></a>
+				<a id="feed" href="http://cn.linkedin.com/pub/shawn-tim/1a/3a7/199"><img src="/image/linkedin.png"></a></a>
+				<a id="feed" href="http://www.facebook.com/tontinme"><img src="/image/facebook.png"></a></a>
+				<a id="feed" href="https://sites.google.com/site/tontinme/"><img src="/image/google_sietes.png"></a></a>
 				<span style="color:#bbb;font-size:12px">世界如此安静</span>
 				<p style="clear:both"></p>
 			</div>
