--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@
 		</div>
 		<div id="wrapper">
 			<div id="content">
-				<a target="_blank" style="float:right;margin-top:15px" href="http://twitter.com/share?url=http://blog.leezhong.com{{ page.url }}&via=lzyy&text={{ page.title }}"><span class="balloon">retweet</span><img src="/image/tweet.png" /></a>
+				<a target="_blank" style="float:right;margin-top:15px" href="http://twitter.com/share?url=http://tontin.me{{ page.url }}&via=lzyy&text={{ page.title }}"><span class="balloon">retweet</span><img src="/image/tweet.png" /></a>
 				<h2>{{ page.title }}</h2>
 				<div class="cnt">
 					{{ content }}
@@ -51,8 +51,8 @@
 				<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 			</div>
 			<div id="footer">
-				<a id="feed" href="http://feeds.feedburner.com/tontinme"><img src="/image/feed.png"></a></a>
-				<span style="color:#aaa">make the world a little better and eaiser</span>
+				<a id="feed" href="/atom.xml"><img src="/image/rss.png"></a></a>
+				<span style="color:#aaa">We can feel that time stands still</span>
 				<p style="clear:both"></p>
 			</div>
 		</div>
