--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,12 +64,12 @@
 			</div>
 
 			<div id="footer">
-				<a id="feed" href="/atom.xml"><img src="/image/rss.png"></a></a>
-				<a id="feed" href="http://mailto:tontinme@gmail.com"><img src="/image/gmail.png"></a></a>
-				<a id="feed" href="http://github.com/tontinme"><img src="/image/github.png"></a></a>
-				<a id="feed" href="http://twitter.com/tontinme"><img src="/image/twitter.png"></a></a>
-				<a id="feed" href="http://cn.linkedin.com/pub/shawn-tim/1a/3a7/199"><img src="/image/linkedin.png"></a></a>
-				<a id="feed" href="http://www.facebook.com/tontinme"><img src="/image/facebook.png"></a></a>
+				<a id="feed" href="/atom.xml"><img src="/image/rss.png"></a>&nbsp;&nbsp</a>
+				<a id="feed" href="mailto:tontinme@gmail.com"><img src="/image/gmail.png"></a>&nbsp;&nbsp</a>
+				<a id="feed" href="http://github.com/tontinme"><img src="/image/github.png"></a>&nbsp;&nbsp</a>
+				<a id="feed" href="http://twitter.com/tontinme"><img src="/image/twitter.png"></a>&nbsp;&nbsp</a>
+				<a id="feed" href="http://cn.linkedin.com/pub/shawn-tim/1a/3a7/199"><img src="/image/linkedin.png"></a>&nbsp;&nbsp</a>
+				<a id="feed" href="http://www.facebook.com/tontinme"><img src="/image/facebook.png"></a>&nbsp;&nbsp</a>
 				<span style="color:#bbb;font-size:12px">世界如此安静</span>
 				<p style="clear:both"></p>
 			</div>
