--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@
 		</div>
 		<div id="wrapper">
 			<div id="content">
-				<a target="_blank" style="float:right;margin-top:15px" href="http://twitter.com/share?url=http://tontin.me{{ page.url }}&via=lzyy&text={{ page.title }}"><span class="balloon">retweet</span><img src="/image/tweet.png" /></a>
+				<a target="_blank" style="float:right;margin-top:15px" href="http://twitter.com/share?url=http://tontin.me{{ page.url }}&via=tontinme&text={{ page.title }}"><span class="balloon">retweet</span><img src="/image/tweet.png" /></a>
 				<h2>{{ page.title }}</h2>
 				<div class="cnt">
 					{{ content }}
