--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
 			</div>
 
 			<div id="footer">
-				<a id="feed" href="/atom.xml"><img src="/image/rss.png">&nbsp;$nbsp</a></a>
+				<a id="feed" href="/atom.xml"><img src="/image/rss.png">&nbsp;&nbsp</a></a>
 				<a id="feed" href="mailto:tontinme@gmail.com"><img src="/image/gmail.png">&nbsp;&nbsp</a></a>
 				<a id="feed" href="http://github.com/tontinme"><img src="/image/github.png">&nbsp;&nbsp</a></a>
 				<a id="feed" href="http://twitter.com/tontinme"><img src="/image/twitter.png">&nbsp;&nbsp</a></a>
