--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,9 @@
 				<a id="feed" href="http://www.facebook.com/tontinme"><img src="/image/facebook.png">&nbsp;&nbsp</a></a>
 				<span style="color:#bbb;font-size:12px">世界如此安静</span>
 				<p style="clear:both"></p>
+               			<p>
+               				<span style="color: rgb(187, 187, 187); font-size: 10px;">This blog is built with <a href="http://github.com/mojombo/jekyll">Jekyll {% jekyll_version %}</a>. The post contents are copyright <a href="http://tontin.me/">tontinme</a> 2010-2011. You can find the source of this site on <a href="http://github.com/tontinme/tontinme.github.com">github</a>. You can contact tontinme at <a href="mailto:tontinme@gmail.com">here</a>.</span> 
+              			 </p>
 			</div>
 		</div>
 		<!--
