--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,6 +51,9 @@
 				<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 			</div>
 			<div id="footer">
+				 <p>
+                                        <span style="color: rgb(187, 187, 187); font-size: 10px;">This blog is built with <a href="http://github.com/mojombo/jekyll">Jekyll {% jekyll_version %}</a>. The post contents are copyright <a href="http://tontin.me/">tontinme</a> 2010-2011. You can find the source of this site on <a href="http://github.com/tontinme/tontinme.github.com">github</a>. You can contact tontinme at <a href="mailto:tontinme@gmail.com">here</a>.</span>
+                                 </p>
 				<a id="feed" href="/atom.xml"><img src="/image/rss.png"></a></a>
 				<span style="color:#aaa">We can feel that time stands still</span>
 				<p style="clear:both"></p>
