--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,8 @@
 			</div>
 
 			<div id="footer">
+                                <span style="color: rgb(187, 187, 187); font-size: 12px;">This blog is built with <a href="http://github.com/mojombo/jekyll">Jekyll</a>.The post contents are copyright <a href="http://tontin.me/">tontinme</a> 2010-2011. You can find the source of this site on <a href="http://github.com/tontinme/tontinme.github.com">github</a>. You can contact tontinme at <a href="mailto:tontinme@gmail.com">here</a>.</span>
+				<p style="clear: both;"></p>
 
 				<a id="feed" href="/atom.xml"><img src="/image/rss.png">&nbsp;&nbsp</a></a>
 				<a id="feed" href="mailto:tontinme@gmail.com"><img src="/image/gmail.png">&nbsp;&nbsp</a></a>
