--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@
 					{{ content }}
 
 					--EOF--
-					<p>若无特别说明，本站文章均为原创，转载请保留链接，谢谢</p>
+	<!--				<p>若无特别说明，本站文章均为原创，转载请保留链接，谢谢</p>  -->
 				</div>
 				<div id="disqus_thread"></div>
 				<script type="text/javascript">
