add google buzz

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,6 +74,7 @@
 				<a id="feed" href="http://cn.linkedin.com/pub/shawn-tim/1a/3a7/199"><img src="/image/linkedin.png">&nbsp;&nbsp</a></a>
 				<a id="feed" href="http://www.facebook.com/tontinme"><img src="/image/facebook.png">&nbsp;&nbsp</a></a>
 				<span style="color:#bbb;font-size:12px">世界如此安静</span>
+                                <link rel="me" type="text/html" href="http://www.google.com/profiles/tontinme" />
 				<p style="clear:both"></p>
 			</div>
 		</div>
